--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,17 @@
 :root
 {
     /* Colors */
-    --bitcoin-orange: #F7931A;
-    --soft-orange:#FFE9D5;
-    --secondary-blue:#1A9AF7;
-    --soft-blue:#E7F5FF;
-    --warm-black:#201E1C;
-    --black:#333;
+    --black:#201E1C;
+    --warm-black:#333;
     --grey:#BABABA;
+    --shadow-color: rgba(89, 73, 30, 0.16);
     --off-white:#FAF8F7;
     --just-white:#FFFFFF;
-    --shadow-color: rgba(89, 73, 30, 0.16);
-    --font-color: #575757;
+    --background-primary-color: #2B2D42;
+    --background-secondary-color: #8D99AE;
+    --background-tertiary-color: #EDF2F4;
+    --primary-color: #EF233C;
+    --secondary-color: #D90429;
 
     /* Font sizes */
     --sm:1.2rem;
@@ -29,9 +29,89 @@
 html
 {
     font-size: 62.5%;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Commissioner', sans-serif;
+    /* font-family: 'Fraunces', serif; */
 }
-h1
+body
 {
-    text-align: center;
+    font-size: var(--lg);
+    background-color: var(--background-tertiary-color);
+    color: var(--just-white);
+}
+a
+{
+    color: inherit;
+    text-decoration: none;
+}
+
+header
+{
+    width: 100%;
+    min-width: 320px;
+    margin: 0 auto;
+}
+.header-top, .header-bottom
+{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 8px 28px;
+}
+.header-top
+{
+    justify-content: flex-end;
+    background-color: var(--background-primary-color);
+}
+.header-top .social-media-container
+{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+.header-top .social-media-container a
+{
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+}
+.header-top .social-media-container a img
+{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.header-bottom
+{
+    justify-content: space-between;
+    background-color: var(--background-secondary-color);
+}
+.header-bottom-left
+{
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    height: 64px;
+}
+.header-bottom-left span
+{
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    background: url('../assets/icons/icons8-code-64.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+.header-bottom-left a h1
+{
+    font-family: 'Fraunces', serif;
+    font-size: var(--h1-size);
+    font-weight: bolder;
+    color: var(--black);
+}
+.header-bottom-right
+{
+    font-weight: 500;
+    text-decoration: underline;
+    color: var(--black);
 }
