--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,12 +12,13 @@
     --background-tertiary-color: #EDF2F4;
     --primary-color: #EF233C;
     --secondary-color: #D90429;
+    --transparency-color: rgba(90, 45, 45, 0.9);
 
     /* Font sizes */
     --sm:1.2rem;
     --md:1.4rem;
     --lg:1.6rem;
-    --h2-size:1.8rem;
+    --h2-size:2.0rem;
     --h1-size:2.4rem;
 }
 *
@@ -36,7 +37,8 @@ body
 {
     font-size: var(--lg);
     background-color: var(--background-tertiary-color);
-    color: var(--just-white);
+    color: var(--warm-black);
+    height: 100vh;
 }
 a
 {
@@ -47,6 +49,7 @@ a
 header
 {
     width: 100%;
+    height: 120px;
     min-width: 320px;
     margin: 0 auto;
 }
@@ -60,7 +63,7 @@ header
 .header-top
 {
     justify-content: flex-end;
-    background-color: var(--background-primary-color);
+    background-color: var(--primary-color);
 }
 .header-top .social-media-container
 {
@@ -83,7 +86,7 @@ header
 .header-bottom
 {
     justify-content: space-between;
-    background-color: var(--background-secondary-color);
+    background-color: var(--secondary-color);
 }
 .header-bottom-left
 {
@@ -112,6 +115,53 @@ header
 .header-bottom-right
 {
     font-weight: 500;
-    text-decoration: underline;
+    border-bottom: 2px solid var(--black);
     color: var(--black);
+}
+main
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-width: 320px;
+    height: calc(100% - 120px);
+    margin: 0 auto;
+    background: url('../assets/images/main-cover.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.main-title
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 180px;
+    margin: 28px;
+}
+.main-title h2
+{
+    padding: 16px 8px;
+    border-radius: 8px;
+    text-align: center;
+    font-family: 'Fraunces', serif;
+    font-size: var(--h2-size);
+    color: var(--just-white);
+    background-color: var(--transparency-color);
+}
+.primary-button
+{
+    width: max-content;
+    height: 36px;
+    padding: 0 28px;
+    border: none;
+    border-radius: 4px;
+    font-family: 'Commissioner', sans-serif;
+    font-size: var(--lg);
+    font-weight: 600;
+    color: var(--just-white);
+    background-color: var(--secondary-color);
+    box-shadow: 0 4px 8px var(--transparency-color);
 }
