--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
     --background-tertiary-color: #EDF2F4;
     --primary-color: #EF233C;
     --secondary-color: #D90429;
-    --transparency-color: rgba(90, 45, 45, 0.9);
+    --transparency-color: rgba(20, 20, 40, 0.9);
 
     /* Font sizes */
     --sm:1.2rem;
@@ -63,7 +63,7 @@ header
 .header-top
 {
     justify-content: flex-end;
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
 }
 .header-top .social-media-container
 {
@@ -86,7 +86,7 @@ header
 .header-bottom
 {
     justify-content: space-between;
-    background-color: var(--secondary-color);
+    background-color: var(--background-tertiary-color);
 }
 .header-bottom-left
 {
@@ -110,13 +110,13 @@ header
     font-family: 'Fraunces', serif;
     font-size: var(--h1-size);
     font-weight: bolder;
-    color: var(--black);
+    color: var(--background-primary-color);
 }
 .header-bottom-right
 {
     font-weight: 500;
-    border-bottom: 2px solid var(--black);
-    color: var(--black);
+    border-bottom: 2px solid var(--background-primary-color);
+    color: var(--background-primary-color);
 }
 main
 {
@@ -131,6 +131,7 @@ main
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    box-shadow: inset 0 8px 12px var(--transparency-color);
 }
 .main-title
 {
@@ -147,9 +148,10 @@ main
     border-radius: 8px;
     text-align: center;
     font-family: 'Fraunces', serif;
-    font-size: var(--h2-size);
-    color: var(--just-white);
-    background-color: var(--transparency-color);
+    font-size: var(--h1-size);
+    color: var(--background-tertiary-color);
+    background-color: var(--background-primary-color);
+    box-shadow: 0 0px 12px var(--transparency-color);
 }
 .primary-button
 {
@@ -161,7 +163,13 @@ main
     font-family: 'Commissioner', sans-serif;
     font-size: var(--lg);
     font-weight: 600;
+    cursor: pointer;
     color: var(--just-white);
     background-color: var(--secondary-color);
     box-shadow: 0 4px 8px var(--transparency-color);
+}
+.primary-button:hover
+{
+    background-color: var(--primary-color);
+    box-shadow: 0 8px 12px var(--transparency-color)
 }
