--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,8 +10,8 @@
     --background-primary-color: #2B2D42;
     --background-secondary-color: #8D99AE;
     --background-tertiary-color: #EDF2F4;
-    --primary-color: #EF233C;
-    --secondary-color: #D90429;
+    --primary-color: #D90429;
+    --secondary-color: #EF233C;
     --transparency-color: rgba(20, 20, 40, 0.9);
 
     /* Font sizes */
@@ -37,7 +37,10 @@ body
 {
     font-size: var(--lg);
     background-color: var(--background-tertiary-color);
-    color: var(--warm-black);
+    color: var(--background-primary-color);
+}
+body.home-body
+{
     height: 100vh;
 }
 a
@@ -63,7 +66,7 @@ header
 .header-top
 {
     justify-content: flex-end;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
 }
 .header-top .social-media-container
 {
@@ -98,9 +101,9 @@ header
 .header-bottom-left span
 {
     display: inline-block;
-    width: 32px;
-    height: 32px;
-    background: url('../assets/icons/icons8-code-64.png');
+    width: 44px;
+    height: 44px;
+    background: url('../assets/icons/icons8-code-64-filled.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -118,7 +121,7 @@ header
     border-bottom: 2px solid var(--background-primary-color);
     color: var(--background-primary-color);
 }
-main
+.home-main
 {
     display: flex;
     justify-content: center;
@@ -133,7 +136,7 @@ main
     background-size: cover;
     box-shadow: inset 0 8px 12px var(--transparency-color);
 }
-.main-title
+.home-main .main-title
 {
     display: flex;
     flex-direction: column;
@@ -142,7 +145,7 @@ main
     height: 180px;
     margin: 28px;
 }
-.main-title h2
+.home-main .main-title h2
 {
     padding: 16px 8px;
     border-radius: 8px;
@@ -155,6 +158,8 @@ main
 }
 .primary-button
 {
+    display: flex;
+    align-items: center;
     width: max-content;
     height: 36px;
     padding: 0 28px;
@@ -163,13 +168,12 @@ main
     font-family: 'Commissioner', sans-serif;
     font-size: var(--lg);
     font-weight: 600;
-    cursor: pointer;
-    color: var(--just-white);
-    background-color: var(--secondary-color);
+    color: var(--background-tertiary-color);
+    background-color: var(--primary-color);
     box-shadow: 0 4px 8px var(--transparency-color);
 }
 .primary-button:hover
 {
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
     box-shadow: 0 8px 12px var(--transparency-color)
 }
