Blogs page con main section terminada

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@
     --black:#201E1C;
     --warm-black:#333;
     --grey:#BABABA;
-    --shadow-color: rgba(89, 73, 30, 0.16);
+    --shadow-color: rgba(60, 60, 100, 0.4);
     --off-white:#FAF8F7;
     --just-white:#FFFFFF;
     --background-primary-color: #2B2D42;
@@ -18,6 +18,7 @@
     --sm:1.2rem;
     --md:1.4rem;
     --lg:1.6rem;
+    --h3-size:1.8rem;
     --h2-size:2.0rem;
     --h1-size:2.4rem;
 }
@@ -176,4 +177,156 @@ header
 {
     background-color: var(--secondary-color);
     box-shadow: 0 8px 12px var(--transparency-color)
+}
+
+/*Estilos para la pagina de blogs.html*/
+.blogs-main
+{
+    width: 100%;
+    min-width: 320px;
+    margin: 0 auto;
+}
+.blogs-main .main-blogpost
+{
+    width: 100%;
+    background-color: var(--background-secondary-color);
+}
+.main-blogpost-container
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    justify-content: center;
+    align-items: center;
+    gap: 28px;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 28px 16px;
+}
+.main-blogpost-image
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.main-blogpost-image h4
+{
+    font-family: 'Fraunces', serif;
+    font-size: var(--h2-size);
+    font-weight: 600;
+    margin-bottom: 12px;
+}
+.main-blogpost-image figure
+{
+    width: 100%;
+}
+.main-blogpost-image figure img
+{
+    width: 100%;
+}
+.main-blogpost-info
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.main-blogpost-info h3
+{
+    font-family: 'Fraunces', serif;
+    font-size: var(--h2-size);
+    font-weight: 700;
+    margin-bottom: 12px;
+}
+.main-blogpost-info p
+{
+    font-size: var(--lg);
+    font-weight: 400;
+    margin-bottom: 16px;
+}
+.secondary-button
+{
+    display: flex;
+    align-items: center;
+    width: max-content;
+    height: 32px;
+    padding: 0 16px;
+    border: 2px solid var(--secondary-color);
+    border-radius: 4px;
+    font-family: 'Commissioner', sans-serif;
+    font-size: var(--md);
+    font-weight: 500;
+    color: var(--background-primary-color);
+    background-color: var(--background-tertiary-color);
+}
+.secondary-button:hover
+{
+    box-shadow: 4px 4px 8px var(--shadow-color);
+}
+.last-blogposts
+{
+    width: 100%;
+    padding: 0 16px;
+    margin-bottom: 28px;
+}
+.last-blogposts-title
+{
+    width: 100%;
+    max-width: 1000px;
+    margin: 20px auto 28px;
+    padding-bottom: 16px;
+    font-family: 'Fraunces', serif;
+    font-size: var(--h2-size);
+    font-weight: 600;
+    text-align: center;
+    border-radius: 1px;
+    border-bottom: 2px solid var(--primary-color);
+}
+.last-blogposts-container
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 280px);
+    grid-auto-rows: 360px;
+    gap: 28px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;   
+}
+.last-blogposts-item
+{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+.last-blogposts-item figure
+{
+    width: 100%;
+    min-height: 40%;
+    margin-bottom: 16px;
+}
+.last-blogposts-item figure img
+{
+    width: 100%;
+    object-fit: cover;
+}
+.last-blogposts-item h5
+{
+    font-family: 'Fraunces', serif;
+    font-size: var(--h3-size);
+    font-weight: 600;
+    margin-bottom: 4px;
+}
+.last-blogposts-item p
+{
+    font-size: var(--md);
+    font-weight: 400;
+    margin-bottom: 8px;
+}
+.last-blogposts-item .secondary-button
+{
+    position: absolute;
+    bottom: 2px;
 }
