--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@
     --off-white:#FAF8F7;
     --just-white:#FFFFFF;
     --background-primary-color: #2B2D42;
-    --background-secondary-color: #8D99AE;
+    --background-secondary-color: #ced4db;
     --background-tertiary-color: #EDF2F4;
     --primary-color: #D90429;
     --secondary-color: #EF233C;
@@ -207,6 +207,7 @@ header
 {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: 100%;
 }
 .main-blogpost-image h4
@@ -271,13 +272,13 @@ header
 {
     width: 100%;
     padding: 0 16px;
-    margin-bottom: 28px;
+    margin: 32px 0 28px;
 }
 .last-blogposts-title
 {
     width: 100%;
     max-width: 1000px;
-    margin: 20px auto 28px;
+    margin: 0 auto 28px;
     padding-bottom: 16px;
     font-family: 'Fraunces', serif;
     font-size: var(--h2-size);
@@ -309,7 +310,6 @@ header
 .last-blogposts-item figure
 {
     width: 100%;
-    min-height: 40%;
     margin-bottom: 16px;
 }
 .last-blogposts-item figure img
@@ -482,4 +482,55 @@ footer p
 {
     font-size: var(--md);
     font-weight: 400;
+}
+
+/* Estilos para la página de perfil.html */
+.profile-section .profile-container
+{
+    display: flex;
+    flex-wrap: wrap;
+}
+.profile-section .profile-container .profile-info
+{
+    width: 50%;
+    min-width: 280px;
+}
+.profile-section .profile-container .profile-info p:first-of-type
+{
+    font-weight: 600;
+}
+.profile-section .profile-container .profile-image
+{
+    width: 280px;
+    height: 280px;
+}
+.profile-section .profile-container .profile-image figure
+{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.profile-section .profile-container .profile-image figure img
+{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.profile-main .last-blogposts-container
+{
+    grid-auto-rows: 280px;
+}
+.profile-main .last-blogposts-item figure
+{
+    width: 80px;
+    height: 80px;
+}
+
+@media (max-width: 648px)
+{
+    .profile-section .profile-container .profile-info
+    {
+        width: 100%;
+    }
 }
